[package]
name = "server-dep-sort"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0"}
bson = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
my_internet_ip = "0.1.1"
rocket = {git = "https://github.com/SergioBenitez/Rocket.git", features = ["json", "secrets"]}
rocket_db_pools = {git = "https://github.com/SergioBenitez/Rocket.git"}
rocket_oauth2 = {version = "0.5.0-rc.1"}
reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
attohttpc = { version = "*", features = ["charsets"] }

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }