[package]
name = "sogrim-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0"}
bson = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
my_internet_ip = "0.1.1"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
actix-web-httpauth = "0.6.0-beta.3"
futures-util = "0.3.17"
jsonwebtoken = "7.2.0"
jsonwebtoken-google = "0.1.2"
env_logger = "0.9.0"
toml = "0.5.8"
dotenv = "0.15.0"
config = "0.10.1"